tests/err06.json.err
Parse error at line 003

001: {
002: 	"a" : 
003: }
     ^
Expected object, array, number or string
